--- a/src/main/resources/templates/index/welcome.html
+++ b/src/main/resources/templates/index/welcome.html
@@ -157,7 +157,7 @@
                             <strong>Github</strong>：
                         </td>
                         <td>
-                            <a href="https://github.com/guochaojava" target="_blank">作者GitHub</a>
+                            <a href="https://github.com/guochaojava/springboot-demo" target="_blank">项目地址</a>
                         </td>
                     </tr>
                     <tr>
