--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,14 +12,14 @@
                         <label class="layui-form-label"><i class="iconfont">&#xe672;</i> 帐号</label>
                         <div class="layui-input-block">
                             <input type="text" name="username" required jq-verify="required" placeholder="登录帐号"
-                                   autocomplete="off" class="layui-input">
+                                   autocomplete="off" class="layui-input" value="admin">
                         </div>
                     </div>
                     <div class="layui-form-item">
                         <label class="layui-form-label"><i class="iconfont">&#xe609;</i> 密码</label>
                         <div class="layui-input-block">
                             <input type="password" name="password" required jq-verify="required" placeholder="登录密码"
-                                   autocomplete="off" class="layui-input">
+                                   autocomplete="off" class="layui-input" value="admin">
                         </div>
                     </div>
                     <!--<div class="layui-form-item">-->
