--- a/src/main/resources/templates/common/version.html
+++ b/src/main/resources/templates/common/version.html
@@ -1,6 +1,6 @@
 <script>
     layui.config({
-        base: 'js/',
+        base: '${base}/js/',
         version: "2.0.0"
     }).extend({
         jqelem: 'jqmodules/jqelem',
