--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>后台模板【springboot】</title>
+    <title>后台模板</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -15,5 +15,4 @@
     <link rel="stylesheet" type="text/css" href="${base}/css/font/iconfont.css?v=1.0.1" media="all">
     <link rel="stylesheet" type="text/css" href="${base}/css/layui.css?v=1.0.9" media="all">
     <link rel="stylesheet" type="text/css" href="${base}/css/main.css?v1.4.0" media="all">
-
 </head>
