--- a/src/main/resources/templates/article/add.html
+++ b/src/main/resources/templates/article/add.html
@@ -33,7 +33,7 @@
                     <div class="layui-form-item ">
                         <label class="layui-form-label">来源</label>
                         <div class="layui-input-block">
-                            <input type="text" name="source" required jq-verify="required|number" jq-error="必须填写|必须是数字"
+                            <input type="text" name="source" required jq-verify="required" jq-error="必须填写"
                                    placeholder="请输入文章来源" autocomplete="off" class="layui-input">
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                         <label class="layui-form-label">排序</label>
                         <div class="layui-input-inline">
                             <input type="text" name="sort" value="0" required jq-verify="required|number"
-                                   jq-error="必须填写|必须是数字地"
+                                   jq-error="必须填写|必须是数字"
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
@@ -60,7 +60,10 @@
                     <div class="layui-form-item">
                         <label class="layui-form-label">内容</label>
                         <div class="layui-input-block">
-                            <div id="content" name="content"></div>
+                            <div id="div1">
+                                <p>欢迎使用 <b>wangEditor</b> 富文本编辑器</p>
+                            </div>
+                            <textarea id="text1" style="display: none" name="content"></textarea>
                         </div>
                     </div>
                     <div class="layui-form-item">
@@ -76,14 +79,15 @@
 </div>
 </body>
 <script type="text/javascript" src="${base}/js/layui/layui.js"></script>
+<script type="text/javascript" src="${base}/js/layui/lay/lib/jquery.js"></script>
 <script type="text/javascript" src="${base}/js/wangEditor.min.js"></script>
 <script src="${base}/js/common.js"></script>
 
 <#include "/common/version.html" />
 <script>
+
     layui.use('product', function () {
         var $ = layui.jquery;
-
         layui.upload({
             url: '${base}/upload/img',
             elem: '#tp',
@@ -106,12 +110,23 @@
                 }
             }
         });
+
+
+        var E = window.wangEditor;
+        var editor = new E('#div1');
+        editor.customConfig.uploadImgServer = '/upload/editor';
+        var $text1 = $('#text1');
+        editor.customConfig.onchange = function (html) {
+            // 监控变化，同步更新到 textarea
+            $text1.val(html);
+            console.log(html);
+        };
+        editor.create();
+        // 初始化 textarea 的值
+        $text1.val(editor.txt.html());
     });
 
-    var E = window.wangEditor;
-    var editor = new E('#content');
-    editor.customConfig.uploadImgServer = '/upload/editor'
-    editor.create();
+
 </script>
 
 </html>
