小细节修改

--- a/src/main/resources/templates/common/version.html
+++ b/src/main/resources/templates/common/version.html
@@ -1,6 +1,6 @@
 <script>
     layui.config({
-        base: '${base}/js/',
+        base: 'js/',
         version: "2.0.0"
     }).extend({
         jqelem: 'jqmodules/jqelem',
@@ -13,7 +13,6 @@
         jqtags: 'jqmodules/jqtags',
         jqform: 'jqmodules/jqform',
         echarts: 'lib/echarts',
-        webuploader: 'lib/webuploader',
         jqcitys: "jqmodules/jqcitys"
     })
 </script>
