--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -11,8 +11,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <!-- load css -->
-    <link rel="stylesheet" type="text/css" href="${base}/css/bootstrap.min.css?v=v3.3.7" media="all">
-    <link rel="stylesheet" type="text/css" href="${base}/css/font/iconfont.css?v=1.0.1" media="all">
-    <link rel="stylesheet" type="text/css" href="${base}/css/layui.css?v=1.0.9" media="all">
-    <link rel="stylesheet" type="text/css" href="${base}/css/main.css?v1.4.0" media="all">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=v3.3.7" media="all">
+    <link rel="stylesheet" type="text/css" href="css/font/iconfont.css?v=1.0.1" media="all">
+    <link rel="stylesheet" type="text/css" href="css/layui.css?v=1.0.9" media="all">
+    <link rel="stylesheet" type="text/css" href="css/main.css?v1.4.0" media="all">
 </head>
