--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,6 @@
 <#include "common/header.html" />
 
-<body style="background-image:url(/images/full-screen-image-1.jpg);background-repeat: no-repeat;background-size:100%;">
+<body>
 <div class="container-fluid larry-wrapper">
     <div class="row">
         <div class="col-xs-12 col-sm-8 col-md-4 col-md-offset-4 col-sm-offset-2">
